--- a/html/bank.html
+++ b/html/bank.html
@@ -9,20 +9,25 @@
 <body>
     <div class="container">
         <div class="balance-section">
-            <h3>Bank Balance</h3>
-            <h1 id="balance">$1000</h1>
+            <div class="balance">
+                <h3>Bank Balance</h3>
+                <h1 id="balance">$1000</h1>
+            </div>
+            <div class="moneyInGame">
+                <h3>Money In Game</h3>
+                <h1 id="moneyIn">$0</h1>
+            </div>
         </div>
         <div class="coin-section">
-            <div class="coin">1</div>
-            <div class="coin">10</div>
-            <div class="coin">50</div>
-            <div class="coin">100</div>
-            <div class="coin">500</div>
+            <div class="coin" id="addOne">1</div>
+            <div class="coin" id="addTen">10</div>
+            <div class="coin" id="addFifty">50</div>
+            <div class="coin" id="addHundred">100</div>
+            <div class="coin" id="addFiveHundred">500</div>
         </div>
         <div class="btn-section">
-            <button id="putBack">Put Back</button>
             <button id="reset">Reset</button>
-            <button id="begin">Let's Begin</button>
+            <a><button id="begin">Let's Begin</button></a>
         </div>
     </div>
     <script src="/js/app.js"></script>
